# gread

./: .gitignore  README.md  meson.build  po.sh  vg.sh
data/: meson.build
po/: LINGUAS  POTFILES  POTFILES.in  en.po  fr.po  gread.pot
src/: main.c  meson.build
src/gui/: gread-activity-choice.c  gread-activity-choice.h  gread-activity-choice.ui  gread-activity.c  gread-activity.h  gread-activity.ui  gread-application.c  gread-application.h  gread-introduction.c  gread-introduction.h  gread-introduction.ui  gread-label.c  gread-label.h  gread-label.ui  gread-menu-dialog.c  gread-menu-dialog.h  gread-menu-dialog.ui  gread-menu.c  gread-menu.h  gread-menu.ui  gread-number-entry.c  gread-number-entry.h  gread-number-entry.ui  gread-random-number-activity.c  gread-random-number-activity.h  gread-random-number-activity.ui  gread-scrollable-window.c  gread-scrollable-window.h  gread-scrollable-window.ui  gread-scrolled-window.c  gread-scrolled-window.h  gread-scrolled-window.ui  gread-text-view.c  gread-text-view.h  gread-text-view.ui  gread-window.c  gread-window.h  gread-window.ui  gui.gresource.xml  gui.resources.xml  (+1 more)
src/theme/: meson.build  style.css  theme.gresource.xml
