gread_incs += include_directories('.')

built_sources += gnome.compile_resources(
  'gui-resources',
  'gui.gresource.xml',
  c_name: 'gui',
)

sources += files(
  'gread-application.c',
  'gread-window.c',
  'gread-label.c',
  'gread-number-entry.c',
  'gread-menu.c',
  'gread-random-number-activity.c',
  'gread-introduction.c',
  'gread-scrolled-window.c',
  'gread-text-view.c',
)
